[package]
name = "balances-history"
version = "0.0.1"
authors = ["Sergey Kutsenko <skutsenko@web3tech.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_qs = { version = "0.8", features = ["warp"] }
serde_with = "1.9.3"
chrono = { version = "0.4.19", features = ["serde"] }
envy = "0.4"
tonic = "0.5.2"
prost = { version = "0.8.0", features = ["no-recursion-limit"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }
postgres-derive = { version = "0.4.1" }
postgres-types = { version = "0.2.2" }
async-trait = { version = "0.1.52" }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "v1.3.2" }
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = "1.4.0"
#bigdecimal = { version = "0.3.0", features = ["serde"] }
rust_decimal = { version = "1.14.3", features = [
    "serde",
    "db-tokio-postgres",
    "db-postgres",
] }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.0" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.3" }
wavesexchange_apis = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_apis/0.1.2" }

futures = "0.3"
anyhow = "1.0.53"
warp = "0.3"
bs58 = "0.4.0"
base64 = "0.13.0"
once_cell = "1.9.0"
blake2 = "0.8"
sha3 = "0.8"
bytes = "1.1.0"
lazy_static = "1.4.0"
thiserror = "1.0.30"
fxhash = "0.2.1"
itertools = "0.10.3"
deadpool-postgres = "0.10.2"

[patch.crates-io]
log = { git = "https://github.com/rust-lang/log", tag = "0.4.14" }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[[bin]]
name = "service"
path = "src/bin/service.rs"
